Bug 1731622 - Handle images in ContentChild::RecvInvokeDragSession. r=nika

This is a copy of the similar code in RemoteDragStartData::AddInitialDnDDataTo

Differential Revision: https://phabricator.services.mozilla.com/D126794